[package]
name = "teralib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.203", features = ["derive"] }
thiserror = "1.0.61"
derive_builder = { version = "0.20.0", features = ["clippy"] }
serde_json = "1.0.117"
cwd_block = { path = "../cwd_block" }
tracing = "0.1.40"

[dev-dependencies]
test-log = { version = "0.2.16", features = ["trace"] }
