[package]
name = "tf-graph"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.7", features = ["derive"] }
color-eyre = "0.6.3"
ignore = "0.4.22"
notify = "6.1.1"
termcolor = "1.4.1"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
teralib = { path = "../teralib" }
